created product category page

--- a/home.html
+++ b/home.html
@@ -64,7 +64,7 @@
     <header>
         <div class="container">
             <div class="header-wrapper">
-                <a class="header-logo" href="javascript:void(0);">
+                <a class="header-logo" href="home.html">
                     <img class="header-logo-content" src="assets/images/logo/header-logo.png" alt="header-logo">
                 </a>
                 <div class="header-items-wrapper">
@@ -294,7 +294,7 @@
                                 </div>
                             </div>
                             <form class="header-search-wrapper">
-                                <input class="font-white header-search-input" type="text" placeholder="Search…">
+                                <input class="font-white text-field-input header-search-input" type="text" placeholder="Search…">
                                 <button class="cursor-pointer header-search-btn" type="submit">
                                     <svg class="header-search-btn-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18.662 18.608">
                                         <path id="Path_17429" data-name="Path 17429" d="M414.819,337.074l-4.232-4.232a7.855,7.855,0,0,0,1.929-5.227,8.074,8.074,0,0,0-8.09-8.09,7.982,7.982,0,0,0-8.09,8.028,8.078,8.078,0,0,0,13.317,6.161l4.232,4.232a.6.6,0,0,0,.871,0A.56.56,0,0,0,414.819,337.074ZM404.427,334.4a6.845,6.845,0,1,1,6.845-6.845A6.826,6.826,0,0,1,404.427,334.4Z" transform="translate(-396.337 -319.524)" fill="currentColor" />
@@ -522,9 +522,9 @@
                     </p>
                     <div class="hero-btn-wrapper">
                         <a class="btn primary-btn" href="javascript:void(0);">
-                        <span>VIEW PRODUCT</span></a>
-                        <a class="btn secondary-btn" href="javascript:void(0);">  
-                         <span>SHOP ALL</span>
+                            <span>VIEW PRODUCT</span></a>
+                        <a class="btn secondary-btn" href="javascript:void(0);">
+                            <span>SHOP ALL</span>
                         </a>
                     </div>
                 </div>
@@ -619,7 +619,7 @@
                             <div class="explore-wrapper">
                                 <img class="img-cover" src="assets/images/sections/explore-section/explore-img-01.png" alt="explore-img">
                                 <h3 class="font-60 font-white explore-media-title">MOTOCROSS</h3>
-                                <a class="btn primary-btn btn-big text-uppercase explore-media-btn" href="javascript:void(0);">
+                                <a class="btn primary-btn btn-big explore-media-btn" href="javascript:void(0);">
                                     <span>EXPLORE MOTOCROSS</span>
                                 </a>
                             </div>
@@ -628,7 +628,7 @@
                             <div class="explore-wrapper">
                                 <img class="img-cover" src="assets/images/sections/explore-section/explore-img-02.png" alt="explore-img">
                                 <h3 class="font-60 font-white explore-media-title">KIDS</h3>
-                                <a class="btn primary-btn btn-big text-uppercase explore-media-btn" href="javascript:void(0);">
+                                <a class="btn primary-btn btn-big explore-media-btn" href="javascript:void(0);">
                                     <span>EXPLORE MOTOCROSS</span>
                                 </a>
                             </div>
@@ -637,8 +637,8 @@
                             <div class="explore-wrapper">
                                 <img class="img-cover" src="assets/images/sections/explore-section/explore-img-03.png" alt="explore-img">
                                 <h3 class="font-60 font-white explore-media-title">ENDURO</h3>
-                                <a class="btn primary-btn btn-big text-uppercase explore-media-btn" href="javascript:void(0);">
-                                <span>EXPLORE MOTOCROSS</span>
+                                <a class="btn primary-btn btn-big explore-media-btn" href="javascript:void(0);">
+                                    <span>EXPLORE MOTOCROSS</span>
                                 </a>
                             </div>
                         </li>
@@ -663,8 +663,8 @@
                     <p class="font-18 two-column-description">
                         Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
                     </p>
-                    <a class="btn primary-btn text-uppercase" href="javascript:void(0);">
-                    <span>VIEW FULL STORY</span>
+                    <a class="btn primary-btn" href="javascript:void(0);">
+                        <span>VIEW FULL STORY</span>
                     </a>
                 </div>
             </div>
@@ -675,7 +675,7 @@
     <section class="cta-banner-section home-cta-banner">
         <div class="cta-banner-wrapper">
             <img class="img-cover cta-banner-img" src="assets/images/sections/cta-banner-section/cta-banner-img-01.png" alt="cta-banner-img">
-            <div class="cta-banner-content">
+            <div class="text-center cta-banner-content">
                 <h2 class="font-40 font-white cta-banner-title">PARTS FINDER</h2>
                 <a class="btn primary-btn" href="javascript:void(0);">
                     <span>LEARN MORE</span>
@@ -754,7 +754,7 @@
                     <p class="font-18 two-column-description">
                         Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
                     </p>
-                    <a class="btn primary-btn text-uppercase" href="javascript:void(0);">
+                    <a class="btn primary-btn" href="javascript:void(0);">
                         <span>VIEW FULL STORY</span>
                     </a>
                 </div>
@@ -808,6 +808,18 @@
                     </ul>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <!----- Cta blog section ----->
+    <section class="cta-blog-section">
+        <img class="img-cover" src="assets/images/sections/cta-blog-section/cta-blog-img-01.png" alt="cta-blog-img">
+        <div class="cta-blog-wrapper">
+            <h2 class="font-white text-center cta-blog-title">
+                NOT WHAT YOU'RE LOOKING FOR?
+                <span class="font-60">WE CAN HELP</span>
+            </h2>
+            <a class="btn primary-btn" href="javascript:void(0);"><span>GET IN TOUCH</span></a>
         </div>
     </section>
 
@@ -887,7 +899,7 @@
                 <div class="footer-update-wrapper">
                     <h3 class="h2 font-white footer-form-title">SIGN UP & STAY UPDATED</h3>
                     <form class="footer-sign-up-form">
-                        <input class="font-white font-14" type="email" placeholder="ENTER EMAIL ADDRESS..." required>
+                        <input class="font-white text-field-input font-14" type="email" placeholder="ENTER EMAIL ADDRESS..." required>
                         <button class="btn primary-btn cursor-pointer footer-sign-up-btn" type="submit">
                             <span>SIGN ME UP</span>
                         </button>
