update two column section img height

--- a/home.html
+++ b/home.html
@@ -653,7 +653,7 @@
         <div class="container">
             <div class="two-column-wrapper">
                 <div class="two-column-img-content">
-                    <img class="img-cover" src="assets/images/sections/two-column-section/two-column-img-01.png" alt="two-column-img">
+                    <img class="img-cover two-column-img" src="assets/images/sections/two-column-section/two-column-img-01.png" alt="two-column-img">
                 </div>
                 <div class="two-column-content">
                     <h2 class="font-40 font-black two-column-title">
@@ -744,7 +744,7 @@
         <div class="container">
             <div class="two-column-wrapper">
                 <div class="two-column-img-content">
-                    <img class="img-cover" src="assets/images/sections/two-column-section/two-column-img-02.png" alt="two-column-img">
+                    <img class="img-cover two-column-img" src="assets/images/sections/two-column-section/two-column-img-02.png" alt="two-column-img">
                 </div>
                 <div class="two-column-content">
                     <h2 class="font-40 font-black two-column-title">
