update the select html and add choices js

--- a/productCategory.html
+++ b/productCategory.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>marsh-mx</title>
 
-    <!----- Nice select  css ----->
-    <!-- <link rel="stylesheet" href="assets/css/nice-select.css"> -->
+    <!----- choices select css ----->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" />
 
     <!----- Splide css ----->
     <link href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css" rel="stylesheet">
@@ -663,16 +663,14 @@
                     </form>
                 </div>
                 <div class="product-blog-content">
-                    <!-- <select name="bikes-filter" id="bikes-filter">
-                        <option value="NewBikes">
-                            <input class="checkbox-input" type="checkbox" id="NewBikes">
+                    <select name="bikes-filter" id="bikesFilter">
+                        <option value="NewBikes-1">
                             <label for="NewBikes">Brand New Bikes</label>
                         </option>
-                        <option value="UsedBikes">
-                            <input class="checkbox-input" type="checkbox" id="UsedBikes">
+                        <option value="UsedBikes-2">
                             <label for="UsedBikes">Used Bikes</label>
                         </option>
-                    </select> -->
+                    </select>
                     <div class="product-card-wrapper">
                         <div class="product-card">
                             <img class="img-cover product-card-img" src="assets/images/sections/product-category-section/product-category-img-01.png" alt="product-category-img">
@@ -919,9 +917,8 @@
     </footer>
 
 
-    <!----- Nice select js ----->
-    <!-- <script src="assets/js/jquery.js"></script>
-    <script src="assets/js/jquery.nice-select.js"></script> -->
+    <!----- choices select js ----->
+<script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
 
     <!----- Splide js ----->
     <script src=" https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-auto-scroll@0.5.3/dist/js/splide-extension-auto-scroll.min.js">
