hide select box

--- a/productCategory.html
+++ b/productCategory.html
@@ -663,13 +663,13 @@
                     </form>
                 </div>
                 <div class="product-blog-content">
-                    <div class="select-box">
+                    <!-- <div class="select-box">
                         <span class="select-box-label">sort</span>
                         <select name="bikes-filter" id="bikesFilter">
                             <option value="NewBikes">brand new bikes</option>
                             <option value="UsedBikes">used bikes</option>
                         </select>
-                    </div>
+                    </div> -->
                     <div class="product-card-wrapper">
                         <div class="product-card">
                             <img class="img-cover product-card-img" src="assets/images/sections/product-category-section/product-category-img-01.png" alt="product-category-img">
