created category hero and explore more sections made responsive product category

--- a/home.html
+++ b/home.html
@@ -609,7 +609,7 @@
     </section>
 
     <!----- Explore more section ----->
-    <section class="overflow-hidden explore-more-section home-explore-more">
+    <section class="overflow-hidden home-explore-more">
         <div class="container">
             <h2 class="text-uppercase font-white text-center">EXPLORE BIKES</h2>
             <div class="explore-slider splide" role="group" aria-label="Splide Basic HTML Example">
