add explore more section in compare page

--- a/compare.html
+++ b/compare.html
@@ -678,6 +678,46 @@
         </div>
     </section>
 
+    <!----- Explore more section ----->
+    <section class="overflow-hidden explore-more-section compare-explore-more">
+        <div class="container">
+            <h2 class="text-uppercase font-white text-center">YOU MAY ALSO BE INTERESTED IN</h2>
+            <div class="explore-slider splide" role="group" aria-label="Splide Basic HTML Example">
+                <div class="explore-track splide__track">
+                    <ul class="explore-list splide__list">
+                        <li class="explore-slide splide__slide">
+                            <div class="explore-wrapper">
+                                <img class="img-cover" src="assets/images/sections/explore-section/explore-img-01.png" alt="explore-img">
+                                <h3 class="font-60 font-white explore-media-title">MOTOCROSS</h3>
+                                <a class="btn primary-btn btn-big explore-media-btn" href="javascript:void(0);">
+                                    <span>EXPLORE MOTOCROSS</span>
+                                </a>
+                            </div>
+                        </li>
+                        <li class="explore-slide splide__slide">
+                            <div class="explore-wrapper">
+                                <img class="img-cover" src="assets/images/sections/explore-section/explore-img-02.png" alt="explore-img">
+                                <h3 class="font-60 font-white explore-media-title">KIDS</h3>
+                                <a class="btn primary-btn btn-big explore-media-btn" href="javascript:void(0);">
+                                    <span>EXPLORE MOTOCROSS</span>
+                                </a>
+                            </div>
+                        </li>
+                        <li class="explore-slide splide__slide">
+                            <div class="explore-wrapper">
+                                <img class="img-cover" src="assets/images/sections/explore-section/explore-img-03.png" alt="explore-img">
+                                <h3 class="font-60 font-white explore-media-title">ENDURO</h3>
+                                <a class="btn primary-btn btn-big explore-media-btn" href="javascript:void(0);">
+                                    <span>EXPLORE MOTOCROSS</span>
+                                </a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!----- Footer ----->
     <footer class="overflow-hidden">
         <div class="container">
